@@ -1357,6 +1357,37 @@ class CyberSourceTest < Test::Unit::TestCase
     assert_equal 'c:billTo/c:postalCode', response.params['invalidField']
   end
 
+  def test_able_to_properly_handle_40bytes_cryptogram
+    long_cryptogram = "NZwc40C4eTDWHVDXPekFaKkNYGk26w+GYDZmU50cATbjqOpNxR/eYA==\n"
+    credit_card = network_tokenization_credit_card('4111111111111111',
+      brand: 'american_express',
+      payment_cryptogram: long_cryptogram)
+
+    stub_comms do
+      @gateway.authorize(@amount, credit_card, @options)
+    end.check_request(skip_response: true) do |_endpoint, body, _headers|
+      assert_xml_valid_to_xsd(body)
+      first_half = Base64.encode64(Base64.decode64(long_cryptogram)[0...20])
+      second_half = Base64.encode64(Base64.decode64(long_cryptogram)[20...40])
+      assert_match %r{<cavv>#{first_half}</cavv>}, body
+      assert_match %r{<xid>#{second_half}</xid>}, body
+    end
+  end
+
+  def test_able_to_properly_handle_20bytes_cryptogram
+    credit_card = network_tokenization_credit_card('4111111111111111',
+      brand: 'american_express',
+      payment_cryptogram: 'EHuWW9PiBkWvqE5juRwDzAUFBAk=')
+
+    stub_comms do
+      @gateway.authorize(@amount, credit_card, @options)
+    end.check_request(skip_response: true) do |_endpoint, body, _headers|
+      assert_xml_valid_to_xsd(body)
+      assert_match %r{<cavv>#{credit_card.payment_cryptogram}\n</cavv>}, body
+      assert_not_match %r{<xid>}, body
+    end
+  end
+
   private
 
   def options_with_normalized_3ds(
